force-app/main/default/objects/Opportunity/fields/Current_MeWs__c.field-meta.xml
<CustomField>
    <fullName>Current_MeWs__c</fullName>
    <description>Current Number of Meaningful Wallets, populated by CSMs</description>
    <inlineHelpText>Current Number of Meaningful Wallets.</inlineHelpText>
    <label>Current MeWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>