force-app/main/default/objects/Opportunity/fields/Current_Stablecoin_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoin_Volume__c</fullName>
    <description>Most recent month’s gross mint and burn volume, populated by cSMs</description>
    <inlineHelpText>Most recent month’s gross mint and burn volume.</inlineHelpText>
    <label>Current Stablecoin Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>