force-app/main/default/objects/Opportunity/fields/Current_Stablecoins_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoins_on_Platform__c</fullName>
    <description>Current total value of stablecoins held on Circle’s platform, populated by CSMs</description>
    <inlineHelpText>Current total value of stablecoins held on Circle’s platform.</inlineHelpText>
    <label>Current Stablecoins on Platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>