force-app/main/default/objects/Opportunity/fields/Current_Stablecoins_on_Platform_Updated__c.field-meta.xml
<CustomField>
    <fullName>Current_Stablecoins_on_Platform_Updated__c</fullName>
    <label>Current Stablecoins on Platform Updated</label>
    <type>DateTime</type>
</CustomField>