force-app/main/default/objects/Opportunity/fields/Custody_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Custody_Subscription_Fee__c</fullName>
    <label>Custody Subscription Fee_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>