force-app/main/default/objects/Opportunity/fields/Custody_Variable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Custody_Variable_Fee__c</fullName>
    <label>Custody Variable Fee_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>