force-app/main/default/objects/Opportunity/fields/Custom_Incentive_Structure__c.field-meta.xml
<CustomField>
    <fullName>Custom_Incentive_Structure__c</fullName>
    <inlineHelpText>Incentives that don’t feature USDC supply &amp; MeW tiers.</inlineHelpText>
    <label>Custom Incentive Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>