force-app/main/default/objects/Opportunity/fields/Custom_Pricing1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pricing1__c</fullName>
    <label>Custom Pricing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>