force-app/main/default/objects/Opportunity/fields/Customer_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Customer_Add_On__c</fullName>
    <formula>IF(!ISBLANK(TEXT(Type)),

IF(ISPICKVAL(Type,&apos;New Business&apos;),&apos;No&apos;,

IF(OR(ISPICKVAL(Type,&apos;Existing Business&apos;),ISPICKVAL(Type,&apos;Extension&apos;)),&apos;Yes&apos;,&apos;No&apos;))

,&apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Add-On</label>
    <type>Text</type>
</CustomField>