force-app/main/default/objects/Opportunity/fields/Cybavo_API_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_API_Addresses__c</fullName>
    <label>Cybavo API Addresses_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>