force-app/main/default/objects/Opportunity/fields/Cybavo_Currencies__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Currencies__c</fullName>
    <label>Cybavo Currencies_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>