force-app/main/default/objects/Opportunity/fields/Cybavo_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Deployment_Type__c</fullName>
    <label>Cybavo Deployment Type_DNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>On Prem - Full Service</fullName>
            </value>
            <value>
                <fullName>On Prem - Guided Service</fullName>
            </value>
            <value>
                <fullName>On Prem KMS</fullName>
            </value>
            <value>
                <fullName>Dedicated SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>