force-app/main/default/objects/Opportunity/fields/Cybavo_Deposit_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Deposit_Allowance__c</fullName>
    <label>Cybavo Deposit Allowance_DNU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>