force-app/main/default/objects/Opportunity/fields/Cybavo_MPC__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_MPC__c</fullName>
    <inlineHelpText>For On-Prem Customers, please choose the number of nodes that customers want to be hosted on CYBAVO environment.</inlineHelpText>
    <label>Cybavo MPC_DNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>All on Customer</fullName>
            </value>
            <value>
                <fullName>1 on CYBAVO</fullName>
            </value>
            <value>
                <fullName>2 on CYBAVO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>