force-app/main/default/objects/Opportunity/fields/Cybavo_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to display Cybavo data section</inlineHelpText>
    <label>Cybavo Opportunity?</label>
    <type>Checkbox</type>
</CustomField>