force-app/main/default/objects/Opportunity/fields/Cybavo_Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Platform_Type__c</fullName>
    <label>Cybavo Platform Type_DNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cybavo Startup</fullName>
            </value>
            <value>
                <fullName>Startup Growth</fullName>
            </value>
            <value>
                <fullName>Growth Business</fullName>
            </value>
            <value>
                <fullName>Business Enterprise</fullName>
            </value>
            <value>
                <fullName>Enterprise Institution</fullName>
            </value>
            <value>
                <fullName>Institution Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>