force-app/main/default/objects/Opportunity/fields/Cybavo_Platform_Type_Cybavo_Startup_St__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Platform_Type_Cybavo_Startup_St__c</fullName>
    <label>Cybavo Platform Type_DNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>