force-app/main/default/objects/Opportunity/fields/Cybavo_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Transaction_Fee__c</fullName>
    <label>Cybavo Transaction Fee_DNU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>