force-app/main/default/objects/Opportunity/fields/Cybavo_Users__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Users__c</fullName>
    <label>Cybavo Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>