force-app/main/default/objects/Opportunity/fields/Cybavo_Wallets__c.field-meta.xml
<CustomField>
    <fullName>Cybavo_Wallets__c</fullName>
    <label>Cybavo Wallets_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>