force-app/main/default/objects/Opportunity/fields/Date_Approvals_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Approvals_Stage_Entered__c</fullName>
    <label>Date Approvals Stage Entered</label>
    <type>DateTime</type>
</CustomField>