force-app/main/default/objects/Opportunity/fields/Date_Closed_Won_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed_Won_Stage_Entered__c</fullName>
    <label>Date Closed Won Stage Entered</label>
    <type>DateTime</type>
</CustomField>