force-app/main/default/objects/Opportunity/fields/Date_Contract_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Stage_Entered__c</fullName>
    <label>Date Contract Stage Entered</label>
    <type>DateTime</type>
</CustomField>