force-app/main/default/objects/Opportunity/fields/Date_Discover_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Discover_Stage_Entered__c</fullName>
    <label>Date Discover Stage Entered</label>
    <type>DateTime</type>
</CustomField>