force-app/main/default/objects/Opportunity/fields/Date_Negotiate_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Negotiate_Stage_Entered__c</fullName>
    <label>Date Negotiate Stage Entered</label>
    <type>DateTime</type>
</CustomField>