force-app/main/default/objects/Opportunity/fields/Date_Prospect_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Prospect_Stage_Entered__c</fullName>
    <label>Date Prospect Stage Entered</label>
    <type>DateTime</type>
</CustomField>