force-app/main/default/objects/Opportunity/fields/Date_Solution_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Solution_Stage_Entered__c</fullName>
    <label>Date Solution Stage Entered</label>
    <type>DateTime</type>
</CustomField>