force-app/main/default/objects/Opportunity/fields/Deal_Moved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Moved__c</fullName>
    <formula>IF(
OR(!ISBLANK(Date_Closed_Lost_Stage_Entered__c),!ISBLANK(Date_Closed_Won_Stage_Entered__c),!ISBLANK(Date_Contract_Stage_Entered__c),!ISBLANK(Date_Approvals_Stage_Entered__c),!ISBLANK(Date_Discover_Stage_Entered__c),!ISBLANK(Date_Negotiate_Stage_Entered__c),!ISBLANK(Date_Prospect_Stage_Entered__c),!ISBLANK(Date_Solution_Stage_Entered__c)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Moved?</label>
    <type>Checkbox</type>
</CustomField>