force-app/main/default/objects/Opportunity/fields/Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet__c</fullName>
    <description>Used to document the URL of the word document for Deal Sheet / Handover sheet</description>
    <label>Partnership Construct (URL)</label>
    <type>Url</type>
</CustomField>