force-app/main/default/objects/Opportunity/fields/Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Decision_Makers__c</fullName>
    <description>The primary decision makers for the account</description>
    <inlineHelpText>Who are the primary decision makers on this deal? Please list their names and roles.</inlineHelpText>
    <label>Decision Makers</label>
    <type>TextArea</type>
</CustomField>