force-app/main/default/objects/Opportunity/fields/Desired_Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Contract_Due_Date__c</fullName>
    <description>Date populated by Sales Enablement during their ranking exercise with Sales leaders - related to Priority Ranking for Legal field.</description>
    <inlineHelpText>This is the date for which Sales would like to have a contract finalized from Legal.</inlineHelpText>
    <label>Desired Contract Due Date</label>
    <type>Date</type>
</CustomField>