force-app/main/default/objects/Opportunity/fields/Distro_Assigned_CP__c.field-meta.xml
<CustomField>
    <fullName>Distro_Assigned_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>distro assigned record</description>
    <label>Distro Assigned_DNU</label>
    <type>Checkbox</type>
</CustomField>