force-app/main/default/objects/Opportunity/fields/DRG_Business_Approver__c.field-meta.xml
<CustomField>
    <fullName>DRG_Business_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRG Business Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>