force-app/main/default/objects/Opportunity/fields/DRG_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>DRG_Rejected_Reason__c</fullName>
    <label>DRG Rejected Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>