force-app/main/default/objects/Opportunity/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for a sales rep to request support from an executive</description>
    <inlineHelpText>Would you like to request an executive sponsor for this deal? Please contact RevOps.</inlineHelpText>
    <label>Executive Sponsor_DNU</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>