force-app/main/default/objects/Opportunity/fields/Executive_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor_Name__c</fullName>
    <formula>IF(!ISBLANK(Executive_Sponsor__c), Executive_Sponsor__r.FirstName + &apos; &apos; + Executive_Sponsor__r.LastName, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Sponsor Name</label>
    <type>Text</type>
</CustomField>