force-app/main/default/objects/Opportunity/fields/Expansion_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Opportunities__c</fullName>
    <description>Used by CSMs to input additional upsell opportunities for the customer</description>
    <inlineHelpText>Enter any additional details for expansion/upsell opportunities</inlineHelpText>
    <label>Expansion Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>