force-app/main/default/objects/Opportunity/fields/Financial_Partnership_Category__c.field-meta.xml
<CustomField>
    <fullName>Financial_Partnership_Category__c</fullName>
    <label>Financial Partnership Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Possible Partnership</fullName>
            </value>
            <value>
                <fullName>Emerging Partnership</fullName>
            </value>
            <value>
                <fullName>Near-Term Partnerships</fullName>
            </value>
            <value>
                <fullName>Current Integration</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
                <isActive>false</isActive>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>Financial Partnerships</fullName>
                <isActive>false</isActive>
                <label>Financial Partnerships</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>