force-app/main/default/objects/Opportunity/fields/Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee__c</fullName>
    <description>legacy field used for payment rails</description>
    <label>Fixed Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>