force-app/main/default/objects/Opportunity/fields/Flow_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Flow_of_Funds__c</fullName>
    <description>Link to Flow of Funds document in Google Drive</description>
    <label>Flow of Funds_DNU</label>
    <type>Url</type>
</CustomField>