force-app/main/default/objects/Opportunity/fields/Flow_of_Funds_Updated__c.field-meta.xml
<CustomField>
    <fullName>Flow_of_Funds_Updated__c</fullName>
    <label>Flow of Funds Updated_DNU</label>
    <type>DateTime</type>
</CustomField>