force-app/main/default/objects/Opportunity/fields/Generate_Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Generate_Deal_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by BD reps to generate the Deal Sheet from the Deal Construct fields on the opportunity.</description>
    <inlineHelpText>Used by BD reps to generate the Deal Sheet from the Deal Construct fields on the opportunity.</inlineHelpText>
    <label>Generate Deal Sheet</label>
    <type>Checkbox</type>
</CustomField>