force-app/main/default/objects/Opportunity/fields/Generate_Partnership_Construct__c.field-meta.xml
<CustomField>
    <fullName>Generate_Partnership_Construct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Partnership Construct</label>
    <type>Checkbox</type>
</CustomField>