force-app/main/default/objects/Opportunity/fields/Genesis_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Genesis_Interest_Rate__c</fullName>
    <description>legacy field</description>
    <label>Genesis Interest Rate (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>