force-app/main/default/objects/Opportunity/fields/High_Impact__c.field-meta.xml
<CustomField>
    <fullName>High_Impact__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <description>Defaults to no, Sales Mgrs have the ability to edit this field</description>
    <inlineHelpText>Is this a deal that has the potential to make a substantial impact on Circle? Is it a Fortune 500 brand? Or a use case with massive minting potential? These deals are surfaced to ELT for visibility.</inlineHelpText>
    <label>High Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>