force-app/main/default/objects/Opportunity/fields/HS_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>HS_Contact_Id__c</fullName>
    <label>HS Contact Id_DNU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>