force-app/main/default/objects/Opportunity/fields/Hubspot_Contact_Id_migration__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Contact_Id_migration__c</fullName>
    <description>Temp field used for migration - can be deleted</description>
    <label>Hubspot Contact Id - migration</label>
    <length>25</length>
    <type>Text</type>
</CustomField>