force-app/main/default/objects/Opportunity/fields/Hubspot_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Created_Date__c</fullName>
    <label>Hubspot Created Date_DNU</label>
    <type>Date</type>
</CustomField>