force-app/main/default/objects/Opportunity/fields/Hubspot_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Deal_Id__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Deal Id_DNU</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>