force-app/main/default/objects/Opportunity/fields/Hypothesis__c.field-meta.xml
<CustomField>
    <fullName>Hypothesis__c</fullName>
    <description>Why do we think the objective is possible? Through discovery discussions with the partner, how do both Circle and the partner think the partner can get us to the objective? Example: By introducing USDC as an in-app remittance option alongside significant existing fiat remittance volume, the partner and Circle believe we can drive a significant share-shift and activate significant MEWs and USDC on platform.</description>
    <inlineHelpText>Why do we think the objective is possible? Through discovery discussions with the partner, how do both Circle and the partner think the partner can get us to the objective? Example: By introducing USDC as an in-app remittance option alongside significant existing fiat remittance volume, the partner and Circle believe we can drive a significant share-shift and activate significant MEWs and USDC on platform.</inlineHelpText>
    <label>Hypothesis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>