force-app/main/default/objects/Opportunity/fields/If_Amendment_Amendment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>If_Amendment_Amendment_Effective_Date__c</fullName>
    <label>If Amendment, Amendment Effective Date</label>
    <type>Date</type>
</CustomField>