force-app/main/default/objects/Opportunity/fields/Indicative_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Indicative_Interest_Rate__c</fullName>
    <defaultValue>1.5</defaultValue>
    <description>legacy field</description>
    <label>Indicative Interest Rate (%)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>