force-app/main/default/objects/Opportunity/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <formula>IF(!ISBLANK(TEXT(Account.Country__c)),
IF(ISPICKVAL(Account.Country__c, &apos;US&apos;), TEXT(Account.Country__c) + &quot; - &quot; +Account.BillingState, TEXT(Account.Country__c)),&apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jurisdiction</label>
    <type>Text</type>
</CustomField>