force-app/main/default/objects/Opportunity/fields/Kash_Approved__c.field-meta.xml
<CustomField>
    <fullName>Kash_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNU</label>
    <type>Checkbox</type>
</CustomField>