force-app/main/default/objects/Opportunity/fields/Kash_Product_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Kash_Product_Approval_Status__c</fullName>
    <defaultValue>&apos;Not Started&apos;</defaultValue>
    <label>Kash Product Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>