force-app/main/default/objects/Opportunity/fields/KYC_Reliance__c.field-meta.xml
<CustomField>
    <fullName>KYC_Reliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Compliance to approve opportunities</description>
    <label>KYC Reliance</label>
    <type>Checkbox</type>
</CustomField>