force-app/main/default/objects/Opportunity/fields/Last_Compliance_State_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Compliance_State_Change_Date__c</fullName>
    <label>Last Compliance State Change Date</label>
    <type>DateTime</type>
</CustomField>