force-app/main/default/objects/Opportunity/fields/Last_Distro_Route_CP__c.field-meta.xml
<CustomField>
    <fullName>Last_Distro_Route_CP__c</fullName>
    <description>Stamping of the date/time that the record was assigned via Distro. Date/time is set at the same time the &quot;Distro Assigned&quot; checkbox is populated.</description>
    <label>Last Distro Route Date/Time_DNU</label>
    <type>DateTime</type>
</CustomField>