force-app/main/default/objects/Opportunity/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>Date the customer is expected to go live, populated by CSMs.</description>
    <inlineHelpText>Date the customer is expected to go live.</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>