force-app/main/default/objects/Opportunity/fields/Lead_Source_Web__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Web__c</fullName>
    <label>Lead Source Web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Other Search Engine</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>