force-app/main/default/objects/Opportunity/fields/Liquidity_Coverage_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Partner_Status__c</fullName>
    <label>Liquidity Coverage Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Preferred Partner</fullName>
            </value>
            <value>
                <fullName>Active Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>