force-app/main/default/objects/Opportunity/fields/Liquidity_Coverage_Priority__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Priority__c</fullName>
    <label>Liquidity Coverage Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>