force-app/main/default/objects/Opportunity/fields/Liquidity_Coverage_Supported_Audience__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Supported_Audience__c</fullName>
    <label>Liquidity Coverage Supported Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2B2C</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>