force-app/main/default/objects/Opportunity/fields/Liquidity_Coverage_Supported_Markets__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Supported_Markets__c</fullName>
    <label>Liquidity Coverage Supported Markets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liquidity_Partner_Supported_Markets</valueSetName>
    </valueSet>
</CustomField>