force-app/main/default/objects/Opportunity/fields/Liquidity_Coverage_Tied_To_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Coverage_Tied_To_Incentive__c</fullName>
    <label>Liquidity Coverage Tied To Incentive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>