force-app/main/default/objects/Opportunity/fields/Lite_Product_Opp__c.field-meta.xml
<CustomField>
    <fullName>Lite_Product_Opp__c</fullName>
    <formula>OR(
   Products_Selected__c = &apos;Core API&apos;,
   Products_Selected__c = &apos;Read Only API&apos;,
   Products_Selected__c = &apos;Core API;Read Only API&apos;,
   Products_Selected__c = &apos;Read Only API; Core API&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lite Product Opp</label>
    <type>Checkbox</type>
</CustomField>