force-app/main/default/objects/Opportunity/fields/Logged_in_BD__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_BD__c</fullName>
    <description>Allow the BD to see only the Accounts that they are assigned to. This is a hidden field only used for reports and dashboards.

https://app.asana.com/0/1206214415395560/1206841656986344/f</description>
    <formula>IF(Account.Business_Development_Owner__r.Id = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in BD</label>
    <type>Checkbox</type>
</CustomField>