force-app/main/default/objects/Opportunity/fields/Logged_in_SE__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_SE__c</fullName>
    <description>Allow the SE to see only the Accounts that they are assigned to. This is a hidden field only used for reports and dashboards.

https://app.asana.com/0/1203473392486179/1206841656986344/f</description>
    <formula>IF( Account.Solutions_Engineer__r.Id  = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in SE</label>
    <type>Checkbox</type>
</CustomField>