force-app/main/default/objects/Opportunity/fields/Manually_Waive_DRG__c.field-meta.xml
<CustomField>
    <fullName>Manually_Waive_DRG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Waive DRG</label>
    <type>Checkbox</type>
</CustomField>