force-app/main/default/objects/Opportunity/fields/Memo_of_Understanding__c.field-meta.xml
<CustomField>
    <fullName>Memo_of_Understanding__c</fullName>
    <description>Used by the legal team to populate the MoU</description>
    <inlineHelpText>The Legal team will populate this field with he requested MoU.</inlineHelpText>
    <label>Memo of Understanding (URL)</label>
    <type>Url</type>
</CustomField>